[package]

name = "xux"
version = "0.1.0"
authors = ["Aleksander Usov <aleksander.usov@gmail.com>"]
description = "Salem and Hafen alternative client"

[dependencies]
rustc-serialize = "*"
byteorder = "*"
openssl = "*"
mio = "*"
flate2 = "*"
nom = "*"
ncurses = { version = "*", optional = true }
log = "*"
fern = "*"
pnet = "*"
pcap = "*"
piston_window = { version = "*", optional = true }
piston2d-gfx_graphics = { version = "0.46.0", optional = true }
crossbeam = "*"
chrono = "*"
bincode = { version = "*", optional = true }
gfx = { version = "*", optional = true }
gfx_window_glutin = { version = "*", optional = true }
glutin = { version = "0.10.0", optional = true }
cgmath = { version = "*", optional = true }
imgui = { optional = true, path = "../imgui-rs" }
imgui-gfx-renderer = { optional = true, path = "../imgui-rs/imgui-gfx-renderer" }
gfx_device_gl = { version = "*", optional = true }
serde = { version = "*", optional = true }
serde_derive = { version = "*", optional = true }
ron = { version = "*", optional = true }
image = { version = "*", optional = true }
failure = "*"

[features]
driver_std = []
driver_mio = []
ai_decl = []
ai_lua = []
hafen = []
salem = []
render_none = []
render_text = [ "ncurses" ]
render_2d_piston = [ "piston_window", "piston2d-gfx_graphics" ]
render_3d_glium = []
render_2d_gfx = [ "gfx", "gfx_window_glutin", "glutin", "cgmath", "imgui", "imgui-gfx-renderer", "gfx_device_gl", "serde", "serde_derive", "bincode", "ron", "image"]
dump_events = [ "bincode" ]
default = [ "driver_std", "ai_decl", "hafen", "render_2d_gfx" ]
mio_lua = [ "driver_mio", "ai_lua" ]
