[package]

name = "xux"
version = "0.1.0"
authors = ["Aleksander Usov <aleksander.usov@gmail.com>"]
description = "Salem and Hafen alternative client"

[dependencies]
byteorder = "*"
openssl = "*"
flate2 = "*"
nom = "*"
ncurses = { version = "*", optional = true }
log = "*"
fern = "*"
pnet = "*"
pcap = "*"
piston_window = { version = "*", optional = true }
piston2d-gfx_graphics = { version = "*", optional = true }
chrono = "*"
bincode = { version = "*", optional = true }
gfx = { version = "*", optional = true }
gfx_window_glutin = { version = "*", optional = true }
glutin = { version = "*", optional = true }
cgmath = { version = "*", optional = true }
imgui = { version = "*", optional = true }
imgui-gfx-renderer = { version = "*", optional = true }
gfx_device_gl = { version = "*", optional = true }
serde = { version = "*", optional = true }
serde_derive = { version = "*", optional = true }
ron = { version = "*", optional = true }
image = { version = "*", optional = true }
failure = "*"

[features]
driver_std = []
driver_mio = []
ai_decl = []
ai_lua = []
hafen = []
salem = []
core = [] #TODO include core crates used in all configs
render_none = [ "image", "serde", "serde_derive" ]
render_text = [ "ncurses" ]
render_2d_piston = [ "piston_window", "piston2d-gfx_graphics" ]
render_3d_glium = []
render_2d_gfx = [ "gfx", "gfx_window_glutin", "glutin", "cgmath", "imgui", "imgui-gfx-renderer", "gfx_device_gl", "serde", "serde_derive", "bincode", "ron", "image"]
dump_events = [ "bincode" ]
default = [ "driver_std", "ai_decl", "hafen", "render_none" ]
mio_lua = [ "driver_mio", "ai_lua" ]
