[package]
name = "client-macroquad"
version = "0.1.0"
edition = "2018"

[dependencies]
xux = { path = "../xux" }
util = { path = "../util" }
macroquad = { version = "0.3.7", path = "../../macroquad" }
egui = "0.13.1"
egui-macroquad = { version = "0.5.0", path = "../../egui-macroquad" }
anyhow = "1.0.42"
ron = "0.6.4"
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
