[package]

name = "client-rs"
version = "0.0.0"
authors = ["Aleksander Usov <aleksander.usov@gmail.com>"]

[dependencies]
rustc-serialize = "*"
byteorder = "*"
openssl = "*"
mio = "*"
#bytes = "*"
#nix = "*"
flate2 = "*"
image = "*"
#hlua = "*"
#lua = "*"
#lua-rs = "*"
#libc = "*"
nom = "*"
#glium = "*"
#cgmath = "*"
#camera_controllers = "*"
ncurses = "*"
log = "*"
fern = "*"
#clippy = "*"
pnet = "*"
#pcapng = "*"

#[dependencies.ncurses]
#path = "../../../ncurses-rs"

#[dependencies.openssl]
#openssl = "0.5.5"
#git = "git://github.com/sfackler/rust-openssl"

#[dependencies.mio]
#git = "https://github.com/AngryLawyer/rust-sdl2"
#mio = "0.3.0"
#git = "https://github.com/carllerche/mio"
#git = "https://github.com/fhartwig/mio.git"

#git = "https://github.com/aleksander/mio.git"
#branch = "fixups"

[dependencies.pcapng]
#git = "https://github.com/richo/pcapng-rs.git"
git = "https://github.com/kornholi/pcapng.git"

#[dependencies.pnet]
#path = "../../../libpnet"
#git = "https://github.com/libpnet/libpnet.git"

[features]
driver_std = []
driver_mio = []
ai_decl = []
ai_lua = []
default = ["driver_std","ai_decl"]
mio_lua = ["driver_mio","ai_lua"]
