[package]

name = "sac"
version = "0.0.0"
authors = ["Aleksander Usov <aleksander.usov@gmail.com>"]
description = "Salem Alternative Client"

[dependencies]
rustc-serialize = "*"
byteorder = "*"
openssl = "*"
mio = "*"
#bytes = "*"
#nix = "*"
flate2 = "*"
image = "*"
#hlua = "*"
#lua = "*"
#lua-rs = "*"
#libc = "*"
nom = "*"
#glium = "*"
#cgmath = "*"
#camera_controllers = "*"
ncurses = "*"
log = "*"
fern = "*"
#clippy = "*"
pnet = "*"
pcap = "*"
error-chain = "*"
piston_window = "*"

[features]
driver_std = []
driver_mio = []
ai_decl = []
ai_lua = []
default = ["driver_std","ai_decl"]
mio_lua = ["driver_mio","ai_lua"]

#[profile.dev]
#panic = 'unwind'
#
#[profile.release]
#panic = 'abort'
